[package]
name = "bolt12-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
bitcoin = { version = "0.32.5", features = ["rand"] }
bitcoin_hashes = "0.16.0"
hex = "0.4.3"
lightning = "0.1.1"
rand = "0.8.5"
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
